--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,7 @@ body::before {
   padding-right: 15px;
   border-right: 4px solid var(--primary);
 
-  font-size: 4vw;
+  font-size: 3vw;
   line-height: 1.1;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.968);
 
@@ -171,6 +171,8 @@ body::before {
 .page-section p {
   margin-bottom: 20px;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.968);
+  font-size: large;
+  text-align: center;
 }
 
 .grid-container {
@@ -216,17 +218,22 @@ body::before {
 }
 
 .contact address {
-  display: flex;
+  display: flex ;
   flex-wrap: wrap;
+  /* flex-flow: row wrap; */
   justify-content: space-around;
   align-items: center;
   height: 100%;
+  padding: 200px 0px 30px 500px;
+  text-align: center;
+  /* position: absolute; */
+  height: 10px;
 }
 
 .contact address a {
   color: white;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.968);
-  padding: 5px;
+  padding: 0px 2px;
   text-decoration: none;
   font-size: 1.3rem;
   font-style: normal;
@@ -267,12 +274,13 @@ body::before {
 
 /* end work images*/
 
-.phone::before {
-  content: url("./assets/phone.svg");
+.twitter::before {
+  content: url("./assets/twitter.svg");
 }
 
+
 .email::before {
-  content: url("./assets/email.svg")
+  content: url("./assets/email.svg");
 }
 
 .github::before {
@@ -284,11 +292,36 @@ body::before {
 }
 
 /* contact form */
-.form-wrapper {
-  text-align: center;
-  font-size: xx-large;
-
+section {
+  display: flex;
 }
+.form {
+  display: flex;
+  padding-left: 100px;
+}
+
+
+/* contact-form label {
+  /* text-align: center;
+  font-size: xx-large; */
+  /* display: block;
+  box-sizing: border-box;
+  padding-left: 400px; 
+
+} */
+
+/* .form-wrapper {
+  display: flex;
+  font-size: medium;
+} */
+
+
+/* .form-name input {
+  width: 100%;
+  padding: 12px;
+} */
+
+
 
 /* footer */
 footer h3 {
@@ -296,6 +329,8 @@ footer h3 {
     color: var(--tertiary);
 
 }
+
+
 /* footer end */
 
 
@@ -333,6 +368,7 @@ footer h3 {
     text-align: left;
     font-size: 7vw;
   }
+
 }
 
 @media screen and (max-width: 768px) {
